# debugger-rs

./: .env  .gitignore  Cargo.toml  GLOSSARY.md  LICENSE  README.md  flake.nix
.github/workflows/: pages.yml
crates/debugger-cli/: Cargo.toml
crates/debugger-cli/src/: main.rs
crates/debugger-core/: Cargo.toml
crates/debugger-core/examples/hardware_watchpoints/: main.rs
crates/debugger-core/examples/software_breakpoints/: main.rs  test  test.c
crates/debugger-core/src/: lib.rs  libc_wrappers.rs  memory_map.rs  symbols.rs  watchpoint.rs
example-programs/: README.md  default.nix
example-programs/multiple_prints/: multiple_prints.c
example-programs/write_to_global_var/: write_to_global_var  write_to_global_var.c
pages/: index.html
paper/: bib.yml  main.typ  styling.typ
paper/.helix/: languages.toml
