[package]
name = "debugger-core"
version = "0.1.0"
edition = "2024"
authors = [
    "Florian Hartung <florian.hartung5@gmail.com>",
    "Marek Freunscht <freunscht58@outlook.de>",
]

[dependencies]
log.workspace = true
nix = { version = "0.30", features = ["ptrace", "process", "fs"] }
thiserror = "2"

[dev-dependencies]
env_logger = "0.11.8"
